# iced-agent-browser

./: Cargo.toml  LICENSE  README.md
iced-winit/: AGENT-FORK.md  Cargo.toml
iced-winit/src/: agent.rs  lib.rs
iced-winit/src/window/: state.rs
plugin/: Cargo.toml
plugin/src/: bridge.rs  collect.rs  lib.rs  logs.rs  protocol.rs  recipe.rs  selector.rs  sem.rs  tools.rs
plugin/tests/: bridge.rs
